syntax= "proto3";
package payeet;

message LoginRequest_S{
    string Session = 1;
}

message LoginRequest{
    string Mail = 1;
    string Password = 2;
}

message LoginResponse{
    string FirstName = 1;
    string LastName = 2;
    string Session = 3;
    string User_ID = 4;
}

message RegisterRequest{
    string FirstName = 1;
    string LastName = 2;

    string Mail = 3;
    string Password = 4;
    
}

message StatusResponse{
    enum code{
        SUCCESS = 0;
        WORNG_CREDS = 1;
        INVALID_MAIL = 2;
        INVALID_SESSION = 3;
    }
    code StatusCode = 1;
    string Message = 2;
}

message BalanceRequest{
    string User_ID = 1;
    string Session = 2;
}

message BalanceResponse{
    string Balance = 1;
}

message TransferRequest{
    string ReceiverMail = 1;
    string SenderID = 2;
    string Session = 3;
}

message historyRequest{
    int32 Index = 1;
    string SenderID = 2;
    string Session = 3;
}

service payeet{
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc LoginS (LoginRequest_S) returns (LoginResponse);
    
    rpc Register(RegisterRequest) returns (StatusResponse);

    rpc GetBalance (BalanceRequest) returns (BalanceResponse);
    
    rpc TransferBalance (TransferRequest) returns (StatusResponse);
}